--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@reduxjs/toolkit": "^2.11.0",
     "axios": "^0.24.0",
+    "jspdf": "^3.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^5.5.0",
+    "react-paginate": "^8.3.0",
+    "react-redux": "^7.2.9",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "react-toastify": "^9.1.3",
+    "recharts": "^2.3.2",
+    "run": "^1.5.0",
+    "tailwindcss": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
